--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,9 @@ Description: Code for implementing SEEK-VFI (Spectral Ensembling of topic models
 License: use_mit_license()
 Imports:
     RSpectra,
-    quadprog
+    quadprog,
+    purrr,
+    furrr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
