--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,11 +8,7 @@ Description: Code for implementing SEEK-VFI (Spectral Ensembling of topic models
 License: use_mit_license()
 Imports:
     RSpectra,
-    quadprog,
-    purrr,
-    furrr,
-    future,
-    parallelly
+    quadprog
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
